[tool.poetry]
name = "pykeybasebot"
version = "0.1.2"
description = "Officially supported Keybase python bot client library"
authors = ["Keybase Engineering Team <alex@keyba.se>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = 'https://github.com/keybase/pykeybasebot'
classifiers = [
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.7',
  'Framework :: Robot Framework :: Library',
  'Framework :: Robot Framework :: Tool',
]
exclude = ["tests/", "examples/"]

[tool.poetry.dependencies]
python = "^3.7"
mashumaro = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1.1"
twine = "^1.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
