[tool.poetry]
name = "pykeybasebot"
version = "0.1.4"
description = "Officially supported Keybase python bot client library"
authors = ["Keybase Engineering Team <alex@keyba.se>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = 'https://github.com/keybase/pykeybasebot'
classifiers = [
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.7',
  'Framework :: Robot Framework :: Library',
  'Framework :: Robot Framework :: Tool',
]
exclude = ["tests/", "examples/"]

[tool.poetry.dependencies]
python = "^3.7"
dataclasses-json = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.1.1"
twine = "^1.13"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
flake8 = "^3.7"
mypy = "^0.720.0"

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
